--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
     <link rel="icon" href="https://paperback.moe/icons/logo-alt.svg">
-    <title>Lê Tôn Giả</title>
+    <title>Forked from Lê Tôn Giả</title>
     <style>
         .test {
             display: inline-block;
@@ -30,11 +30,11 @@
 
 <body>
     <header><img class="icon" src="https://paperback.moe/icons/logo-alt.svg" alt="Repository logo">
-        <h1>Lê Tôn Giả</h1>
+        <h1>Forked from Lê Tôn Giả</h1>
         <p class="pageDescription">A Paperback extensions repository</p>
         <a style="text-decoration: none;" class="anchor-3Z-8Bb anchorUnderlineOnHover-2ESHQB test"
             title="Add to Paperback"
-            href="https://paperback.moe/addRepo/?name=Vietnamese+Extensions+created+by+L%C3%8A+T%C3%94N+GI%E1%BA%A2&amp;url=https%3A%2F%2Fhuynlx.github.io%2FExtensions-Viet%2F"
+            href="https://paperback.moe/addRepo/?name=Vietnamese+Extensions+created+by+IaiNglen&amp;url=https%3A%2F%2Fiainglen.github.io%2FExtensions-Viet%2F"
             rel="noreferrer noopener" target="_blank" role="button" tabindex="0">Add to Paperback</a>
     </header>
     <div class="content">
@@ -46,13 +46,13 @@
         </blockquote>
         <blockquote>
             <p>On a Paperback installed device, press <a
-                    href="https://paperback.moe/addRepo/?name=Vietnamese+Extensions+created+by+L%C3%8A+T%C3%94N+GI%E1%BA%A2&amp;url=https%3A%2F%2Fhuynlx.github.io%2FExtensions-Viet%2F">Add
+                    href="https://paperback.moe/addRepo/?name=Vietnamese+Extensions+created+by+IaiNglen&amp;url=https%3A%2F%2Fiainglen.github.io%2FExtensions-Viet%2F">Add
                     to Paperback</a> or use the base URL to add this repository to the
                 app.</p>
         </blockquote>
         <div class="baseUrl">
             <p class="title">Base URL:</p>
-            <p>https://huynlx.github.io/Extensions-Viet/</p>
+            <p>https://iainglen.github.io/Extensions-Viet/</p>
         </div>
         <dev class="availableSources">
             <p class="title">Available Sources:</p>
